<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- General -->
    <string name="app_name">Charging Stations</string>
    <string name="action_settings">Settings</string>
    <string name="gps_install">Please install Google Play Services</string>
    <string name="loading">Loading, please wait...</string>

    <!-- Internet connectivity dialog -->
    <string name="internet_dialog_title">No internet connection</string>
    <string name="internet_dialog_message">Internet connection needed. Open settings to resolve this problem?</string>
    <string name="internet_dialog_cancel">Cancel</string>
    <string name="internet_dialog_ok">OK</string>

    <!-- Near Me Fragment -->
    <string name="near_me">Near me</string>
    <string name="indicator_message">Finding chargers near you...</string>
    <string name="indicator_settings">Applying updated settings...</string>
    <string name="last_updated">Got %1$s chargers at %2$s</string>
    <string name="no_address_found">No address found</string>
    <string name="no_chargers_nearby">No chargers nearby</string>

    <!-- Search fragment -->
    <string name="search">Search</string>
    <string name="please_enter_a_city">Please enter a city</string>
    <string name="no_results">No results</string>
    <string name="search_for_something">Search for a place</string>
    <string name="searching_for_chargers">Searching for chargers...</string>

    <!-- Details -->
    <string name="title_activity_charger_detail">Details</string>
    <string name="directions">Directions</string>
    <string name="loading_charger_point">Loading charger point...</string>
    <string name="charger_information">Information</string>
    <string name="charging_points">Charging points</string>
    <string name="owned_by">Owned by %s.</string>

    <!-- Detail row -->
    <string name="detail_connector">Connector type: %s</string>
    <string name="detail_capacity">Charging capacity: %s</string>
    <string name="detail_vehicle_type">Vehicle type: %s</string>
    <string name="detail_charge_mode">Charge mode: %s</string>
    <string name="detail_manufacturer">Manufacturer: %s</string>
    <string name="detail_vacant">Vacant: %s</string>
    <!-- Vacancy specific -->
    <string name="not_specified">Not specified</string>
    <string name="available">Available</string>
    <string name="busy">Busy (charging)</string>
    <string name="reserved">Reserved</string>

    <!-- Preferences -->
    <string name="key_distance" translatable="false">DISTANCE</string>
    <string name="key_limit" translatable="false">LIMIT</string>
    <string name="title_distance">Search radius</string>
    <string name="title_limit">Limit number of results</string>
    <string name="summary_distance">Radius is set to %s</string>
    <string name="summary_limit">Will not return more than %s charging points</string>

    <!-- About screen -->
    <string name="about">About</string>
    <string name="version" translatable="false">v%s</string>
    <string name="about_message1">Created by Even Holthe, during the App Development course at HiOA.</string>
    <string name="about_message2">Data provided by Nobil under the Creative Commons 3.0 Unported license</string>
</resources>
