<?xml version="1.0" encoding="utf-8"?>

<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
          android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="#1"
                android:textStyle="bold|italic"
                android:id="@+id/chargerNo" android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_connector"
                android:id="@+id/connector" android:layout_alignBottom="@+id/chargerNo"
                android:layout_toEndOf="@+id/chargerNo" android:layout_marginLeft="30dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_capacity"
                android:id="@+id/capacity" android:layout_below="@+id/connector"
                android:layout_alignStart="@+id/connector"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_vehicle_type"
                android:id="@+id/vehicle_type" android:layout_below="@+id/capacity"
                android:layout_alignStart="@+id/capacity"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_charge_mode"
                android:id="@+id/charge_mode" android:layout_below="@+id/vehicle_type"
                android:layout_alignStart="@+id/vehicle_type"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_manufacturer"
                android:id="@+id/manufacturer" android:layout_below="@+id/charge_mode"
                android:layout_alignStart="@+id/charge_mode"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_vacant"
                android:id="@+id/vacant" android:layout_below="@+id/manufacturer"
                android:layout_alignStart="@+id/manufacturer"/>
    </RelativeLayout>
</TableRow>
