<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="net.evenh.chargingstations.ChargerDetail">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">

        <ImageView
                android:layout_width="fill_parent"
                android:layout_height="250dp"
                android:background="#000000"
                android:padding="1dp"
                android:id="@+id/charger_image" android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginTop="5dp"
                android:text="@string/charging_points"
                android:id="@+id/charger_points" android:layout_below="@+id/charger_image"
                android:layout_alignParentStart="true"/>
        <TableLayout
                android:id="@+id/charger_points_table"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:layout_below="@+id/charger_points"
                android:layout_alignParentStart="true">
        </TableLayout>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginTop="5dp"
                android:text="@string/charger_information"
                android:id="@+id/textView"
                android:layout_below="@+id/charger_points_table" android:layout_alignParentStart="true"/>


        <TextView
                android:id="@+id/charger_information"
                android:text="@string/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email|web"
                android:layout_below="@+id/textView" android:layout_alignParentStart="true"/>

    </RelativeLayout>
</ScrollView>
